update jwt filter to prevent query db, add retry and sleep for 5s to prevent api exhaustion from Hugging Face.